# solana-playground

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE-APACHE  Makefile  Makefile.vercel  My b  README.md  Readme.md  compose.yaml  supported-crates.json  supported-packages.json
.github/: local-ci-with-act.md
client/: .env.example  .prettierignore  .prettierrc.json  .vercelignore  Dockerfile  Dockerfile.build  README.md  compose.yaml  compose.yml  craco.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
docs/: deploy-client-vercel.md
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  app.yaml  build.rs  compose.yaml  rustfmt.toml
server/migrations/: 20240101000000_create_share_table.sql  20260507000000_add_legacy_id.sql
server/programs/: Cargo.toml
server/programs/default/src/: lib.rs
server/src/: config.rs  db.rs  error.rs  log.rs  main.rs  package.rs  program.rs  utils.rs
server/src/db/: id.rs
server/src/middlewares/: api_key.rs  compression.rs  cors.rs  limit.rs  log.rs  mod.rs
server/src/routes/: build.rs  deploy.rs  mod.rs  packages.rs  share.rs  types.rs
vscode/: .gitignore  README.md  package.json  (+1 more)
wasm/anchor-cli/: Cargo.toml  idl.json
wasm/anchor-cli/src/: cli.rs  js.rs  lib.rs  utils.rs
wasm/anchor-cli/src/commands/: idl.rs  mod.rs
wasm/playnet/: Cargo.toml  README.md
wasm/playnet/src/: lib.rs  playnet.rs  rpc.rs  serde.rs  types.rs  utils.rs
wasm/playnet/src/runtime/: bank.rs  message_processor.rs  mod.rs  nonce_keyed_account.rs  system_instruction_processor.rs  transaction_history.rs
wasm/playnet/src/test_programs/: hello_world.rs  mod.rs  transfer_cpi.rs
wasm/rust-analyzer/: Cargo.toml  rust-toolchain.toml
wasm/rust-analyzer/src/: lib.rs  proc_macro.rs  return_types.rs  snippet.rs  to_proto.rs  utils.rs  world_state.rs
wasm/rustfmt/rustfmt-nightly/: Cargo.toml
wasm/rustfmt/rustfmt-nightly/src/: attr.rs  closures.rs  comment.rs  expr.rs  formatting.rs  lib.rs  missed_spans.rs  string.rs
wasm/rustfmt/rustfmt-nightly/src/config/: options.rs
wasm/rustfmt/rustfmt-wasm/: Cargo.toml
wasm/rustfmt/rustfmt-wasm/src/: lib.rs
wasm/seahorse-compile/: Cargo.toml
wasm/seahorse-compile/src/: lib.rs
wasm/solana-cli/: Cargo.toml
wasm/solana-cli/src/: clap.rs  cli.rs  lib.rs  wasm.rs
wasm/solana-cli/src/commands/: cluster_query.rs  config.rs  feature.rs  inflation.rs  mod.rs  nonce.rs  program.rs  stake.rs  validator_info.rs  vote.rs  wallet.rs
wasm/solana-cli/src/utils/: blockhash_query.rs  checks.rs  memo.rs  mod.rs  spend_utils.rs
wasm/solana-client/: Cargo.toml  README.md
wasm/solana-client/src/: client.rs  constants.rs  error.rs  lib.rs  provider.rs  pubsub.rs  request.rs  response.rs
wasm/solana-client/src/methods/: account_info.rs  balance.rs  block.rs  block_commitment.rs  block_height.rs  block_production.rs  block_time.rs  blockhash_valid.rs  blocks.rs  blocks_with_limit.rs  cluster_nodes.rs  epoch_info.rs  epoch_schedule.rs  fee_for_message.rs  first_available_block.rs  genesis_hash.rs  health.rs  highest_snapshot_slot.rs  identity.rs  inflation_governor.rs  inflation_rate.rs  inflation_reward.rs  largest_accounts.rs  latest_blockhash.rs  leader_schedule.rs  max_retransmit_slot.rs  max_shred_insert_slot.rs  minimum_balance_for_rent_exemption.rs  minimum_ledger_slot.rs  mod.rs  multiple_accounts.rs  program_accounts.rs  recent_performance_samples.rs  recent_prioritization_fees.rs  request_airdrop.rs  send_transaction.rs  serde_utils.rs  signature_statuses.rs  signatures_for_address.rs  simulate_transaction.rs  (+15 more)
wasm/solana-client/src/utils/: clap.rs  mod.rs  nonce_utils.rs  rpc_config.rs  rpc_filter.rs  rpc_request.rs  rpc_response.rs
wasm/spl-token-cli/: Cargo.toml
wasm/spl-token-cli/src/: clap.rs  cli.rs  config.rs  constants.rs  lib.rs  output.rs  sort.rs  wasm.rs
wasm/sugar-cli/: Cargo.toml
wasm/sugar-cli/src/: cli.rs  js.rs  lib.rs
wasm/utils/solana-clap-v3-utils/: Cargo.toml
wasm/utils/solana-clap-v3-utils/src/: input_parsers.rs  input_validators.rs  keypair.rs  nonce.rs
wasm/utils/solana-cli-config/: Cargo.toml
wasm/utils/solana-cli-config/src/: config.rs  config_input.rs  lib.rs
wasm/utils/solana-cli-output/: Cargo.toml
wasm/utils/solana-cli-output/src/: cli_output.rs  lib.rs
wasm/utils/solana-extra/: Cargo.toml  README.md  build.rs
wasm/utils/solana-extra/src/: lib.rs  transaction_status.rs  utils.rs
wasm/utils/solana-extra/src/account_decoder/: mod.rs  parse_token.rs  parse_token_extension.rs
wasm/utils/solana-extra/src/program/: mod.rs
wasm/utils/solana-extra/src/program/spl_associated_token_account/: instruction.rs  mod.rs
wasm/utils/solana-extra/src/program/spl_memo/: mod.rs
wasm/utils/solana-extra/src/program/spl_token/: error.rs  instruction.rs  mod.rs  native_mint.rs  state.rs
wasm/utils/solana-extra/src/program/spl_token_2022/: error.rs  generic_token_account.rs  instruction.rs  mod.rs  native_mint.rs  pod.rs  processor.rs  state.rs
wasm/utils/solana-extra/src/program/spl_token_2022/extension/: immutable_owner.rs  mint_close_authority.rs  mod.rs  non_transferable.rs  reallocate.rs
wasm/utils/solana-extra/src/program/spl_token_2022/extension/confidential_transfer/: instruction.rs  mod.rs  processor.rs
wasm/utils/solana-extra/src/program/spl_token_2022/extension/default_account_state/: instruction.rs  mod.rs  processor.rs
wasm/utils/solana-extra/src/program/spl_token_2022/extension/interest_bearing_mint/: instruction.rs  mod.rs  processor.rs
wasm/utils/solana-extra/src/program/spl_token_2022/extension/memo_transfer/: instruction.rs  mod.rs  processor.rs
wasm/utils/solana-extra/src/program/spl_token_2022/extension/transfer_fee/: instruction.rs  mod.rs  processor.rs
wasm/utils/solana-extra/src/program/vote/: authorized_voters.rs  mod.rs  vote_error.rs  vote_instruction.rs
wasm/utils/solana-extra/src/program/vote/vote_state/: mod.rs  vote_state_versions.rs
wasm/utils/solana-playground-utils/: Cargo.toml
wasm/utils/solana-playground-utils/src/: js.rs  lib.rs
(+1799 files in other folders)
