[package]
name = "solpg-server"
version = "0.1.0"
edition = "2021"
description = "Solana Playground server"
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
homepage = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
readme = "README.md"
keywords = ["solana", "playground", "server", "build", "compile"]
categories = ["web-programming::http-server"]

[dependencies]
anchor-syn = { version = "0.29.0", features = ["allow-missing-optionals", "event-cpi", "idl-parse", "init-if-needed"] }
anyhow = "1.0.75"
axum = "0.7.2"
dotenv = "0.15.0"
http = "1.0.0"
mongodb = "2.8.0"
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["compression-br", "cors", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
