[package]
name = "solpg-server"
version = "0.1.0"
edition = "2021"
description = "Solana Playground server"
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
homepage = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
readme = "README.md"
keywords = ["solana", "playground", "server", "build", "compile"]
categories = ["web-programming::http-server"]

[features]
unstable = []

[dependencies]
anchor-syn = { version = "0.29.0", features = ["allow-missing-optionals", "event-cpi", "idl-parse", "init-if-needed"] }
anyhow = "1.0.102"
axum = "0.8.9"
dotenv = "0.15.0"
mongodb = "2.8.0"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["compression-br", "cors", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng"] }
