[package]
name = "solpg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "default/src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
a3dfa2bc-9057-4e4d-93e1-7597887f0047 = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
overflow-checks = true
incremental = true

[dependencies]
anchor-lang = { version = "*", features = [
    "interface-instructions",
    "anchor-debug",
    "allow-missing-optionals",
    "init-if-needed",
] }
anchor-spl = { version = "*", features = ["dex", "governance", "metadata"] }
arrayref = "*"
# borsh version to match anchor-lang to avoid "`borsh` is ambiguous" error
borsh = ">=0.9, <0.11"
borsh-derive = "*"
bytemuck = "*"
bytemuck_derive = "*"
mpl-bubblegum = "*"
mpl-token-auth-rules = { version = "*", features = ["no-entrypoint"] }
mpl-token-metadata = "*"
num-derive = "*"
num-traits = "*"
pyth-sdk = "*"
pyth-sdk-solana = "*"
serde = "*"
solana-program = "*"
spl-associated-token-account = "*"
spl-pod = "*"
spl-tlv-account-resolution = "*"
spl-token = "*"
spl-token-2022 = "*"
spl-token-metadata-interface = "*"
spl-transfer-hook-interface = "*"
spl-type-length-value = "*"
thiserror = "*"

## Does not build with anchor 0.30.0, throws errors on build
# spl-account-compression = { version = "*", features = ["cpi"] }
# switchboard-solana = "*"
# switchboard-v2 = "*"
