[package]
name = "anchor-cli-wasm"
version = "0.29.0" # mirror Anchor version
description = "Anchor CLI for Solana Playground with WASM"
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["anchor", "cli", "solana", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = "0.29.0"
anchor-syn = { version = "0.29.0", features = ["idl-types"] }
anyhow = "*"
clap = { version = "*", features = ["derive"] }
console = "*"
console_error_panic_hook = "*"
flate2 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
solana-client-wasm = { path = "../solana-client" }
solana-playground-utils-wasm = { path = "../utils/solana-playground-utils" }
solana-sdk = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
