[package]
name = "seahorse-compile-wasm"
version = "0.2.4-wasm-fix" # mirror seahorse-lang version
edition = "2021"
authors = ["Callum McIntyre <callum@pointer.gg>"]
description = "Seahorse compiler for Solana Playground with WASM."
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
# 0.2.4: File system integration broke WASM: https://github.com/ameliatastic/seahorse-lang/commit/6a9613749e570d1ac85e2e8d0877f8b09b2b0b33
# the revision used is pre-release, with a fix for WASM: https://github.com/ameliatastic/seahorse-lang/pull/67
# seahorse-lang = "0.2.3"
seahorse-lang = { git = "https://github.com/ameliatastic/seahorse-lang", rev = "38a4c0dd46fe445a88fcf64098ce16baab2bfd73" }
solana-playground-utils-wasm = { path = "../utils/solana-playground-utils" }
wasm-bindgen = "0.2.81"
