[package]
name = "seahorse-compile-wasm"
version = "0.1.1" # mirror seahorse-dev version
edition = "2021"
authors = ["Callum McIntyre <callum.mcintyre@solana.com>"]
description = "Seahorse compiler for Solana Playground with WASM."
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "*"
seahorse-dev = "0.1.1"
solana-playground-utils-wasm = { path = "../utils/solana-playground-utils" }
wasm-bindgen = "*"
