[package]
name = "solana-cli-wasm"
version = "1.11.0"
description = "Solana CLI for Solana Playground with WASM."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "cli", "wasm", "playground"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
clap = "3.1.18"
console = "0.15.0"
console_error_panic_hook = "0.1.7"
const_format = "0.2.23"
num-traits = "0.2"
semver = "1.0.9"
serde = "*"
serde_derive = "*"
serde_json = "*"
solana-clap-v3-utils-wasm = { path = "../utils/solana-clap-v3-utils" }
solana-cli-config-wasm = { path = "../utils/solana-cli-config" }
solana-cli-output-wasm = { path = "../utils/solana-cli-output" }
solana-client-wasm = { path = "../solana-client" }
solana-extra-wasm = { path = "../utils/solana-extra" }
solana-playground-utils-wasm = { path = "../utils/solana-playground-utils" }
solana-remote-wallet = { version = "~1.18", default-features = false }
solana-sdk = "*"
solana-version = "~1.18"
thiserror = "1.0.31"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
