[package]
name = "solana-client-wasm"
version = "1.11.0-beta"
description = "Solana non-blocking WASM RPC client."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "wasm", "client", "rpc", "playground"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
clap = "3.1.18"
futures = "0.3"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
solana-extra-wasm = { path = "../utils/solana-extra", version = "=1.11.0-beta" }
solana-sdk = "=1.11.0"
thiserror = "1.0"
