[package]
name = "solana-client-wasm"
version = "1.18.0" # mirror solana-sdk version
description = "Solana non-blocking WASM RPC client."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "wasm", "client", "rpc", "playground"]
readme = "README.md"

[features]
pubsub = ["web-sys/MessageEvent", "web-sys/WebSocket", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
futures = "0.3"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
http = "1.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_tuple = "0.5"
serde_with = "3.9"
solana-extra-wasm = { path = "../utils/solana-extra", version = "=1.18.0" }
solana-sdk = "~1.18"
thiserror = "1"
wasm-bindgen = { version = "0.2.88", optional = true }
wasm-bindgen-futures = { version = "0.4.38", optional = true }
web-sys = { version = "0.3.65", features = ["AbortController", "MessageEvent", "WebSocket"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"