[package]
name = "spl-token-cli-wasm"
version = "2.0.15"
description = "SPL-Token CLI for Solana Playground with WASM."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["spl", "token", "solana", "cli", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = "3.1.18"
console = "0.15.0"
console_error_panic_hook = "0.1.7"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_json = "1.0.81"
solana-clap-v3-utils-wasm = { path = "../utils/solana-clap-v3-utils", version = "=1.11.0" }
solana-cli-config-wasm = { path = "../utils/solana-cli-config", version = "=1.11.0" }
solana-cli-output-wasm = { path = "../utils/solana-cli-output", version = "=1.11.0" }
solana-client-wasm = { path = "../solana-client", version = "=1.11.0-beta" }
solana-extra-wasm = { path = "../utils/solana-extra", version = "=1.11.0-beta" }
solana-playground-utils-wasm = { path = "../utils/solana-playground-utils" }
solana-remote-wallet = { version = "=1.11.0", default-features = false}
solana-sdk = "=1.11.0"
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "=0.2.81"
wasm-bindgen-futures = "=0.4.31"
