[package]
name = "spl-token-cli-wasm"
version = "2.0.15"
description = "SPL-Token CLI for Solana Playground with WASM."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["spl", "token", "solana", "cli", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = "*"
console = "*"
console_error_panic_hook = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
solana-clap-v3-utils-wasm = { path = "../utils/solana-clap-v3-utils" }
solana-cli-config-wasm = { path = "../utils/solana-cli-config" }
solana-cli-output-wasm = { path = "../utils/solana-cli-output" }
solana-client-wasm = { path = "../solana-client" }
solana-extra-wasm = { path = "../utils/solana-extra" }
solana-playground-utils-wasm = { path = "../utils/solana-playground-utils" }
solana-remote-wallet = { version = "*", default-features = false }
solana-sdk = "*"
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
