[package]
name = "sugar-cli-wasm"
version = "1.1.0-alpha+CMv3"
description = "Command line tool for creating and managing Metaplex Candy Machines."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "GPL-3.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["sugar", "cli", "metaplex", "solana", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "*", features = ["derive"] }
js-sys = "*"
solana-playground-utils-wasm = { path = "../utils/solana-playground-utils" }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"