[package]
name = "rustfmt-wasm"
version = "0.99.4"
description = "Rust formatter for WASM"
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
keywords = ["rustfmt", "wasm", "rust", "format", "rustwasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
rustfmt-nightly = { path = "../rustfmt-nightly" }
wasm-bindgen = "=0.2.30"
