[package]
name = "solana-cli-config-wasm"
authors = ["Acheron <acheroncrypto@gmail.com>"]
description = "Solana CLI config for WASM."
version = "1.11.0"
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm"]

[dependencies]
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_yaml = "0.8.24"
solana-clap-v3-utils-wasm = { path = "../solana-clap-v3-utils" }
solana-sdk = "*"
url = "2.2.2"
