[package]
name = "solana-cli-output-wasm"
version = "1.11.0"
description = "Solana WASM CLI output."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm"]

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "3.1.18"
console = "0.15.0"
humantime = "2.0.1"
pretty-hex = "0.3.0"
semver = "1.0.9"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_json = "1.0.81"
solana-clap-v3-utils-wasm = { path = "../solana-clap-v3-utils", version = "=1.11.0" }
solana-cli-config-wasm = { path = "../solana-cli-config", version = "=1.11.0" }
solana-client-wasm = { path = "../../solana-client", version = "=1.11.0-beta"}
solana-extra-wasm = { path = "../solana-extra", version = "=1.11.0-beta"}
solana-sdk = "=1.11.0"
