[package]
name = "solana-cli-output-wasm"
version = "1.11.0"
description = "Solana WASM CLI output."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm"]

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "*"
console = "*"
humantime = "2.0.1"
pretty-hex = "0.3.0"
semver = "1.0.9"
serde = "*"
serde_derive = "*"
serde_json = "*"
solana-clap-v3-utils-wasm = { path = "../solana-clap-v3-utils" }
solana-cli-config-wasm = { path = "../solana-cli-config" }
solana-client-wasm = { path = "../../solana-client" }
solana-extra-wasm = { path = "../solana-extra" }
solana-sdk = "*"
