[package]
name = "solana-extra-wasm"
version = "1.14.16" # mirror solana-sdk version
description = "Solana WASM compatible utilities."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm", "extra", "utils"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
Inflector = "0.11.4"
arrayref = "0.3.6"
assert_matches = "1.5.0"
base64 = "0.13.0"
bincode = "1.3.3"
borsh = "0.9.1"
bs58 = "0.4.0"
bytemuck = "1.7.2"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "3.1.18"
console = "0.15.0"
fluvio-wasm-timer = "0.2.5"
humantime = "2.0.1"
lazy_static = "1.4.0"
log = "0.4.17" # only for nightly builds
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
semver = "1.0.9"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_json = "1.0.81"
solana-frozen-abi = "1.14.16"
solana-frozen-abi-macro = "1.14.16"
solana-sdk = "1.14.16"
thiserror = "1.0"

[build-dependencies]
rustc_version = "0.4"
