[package]
name = "solana-extra-wasm"
version = "1.18.0" # mirror solana-sdk version
description = "Solana WASM compatible utilities."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm", "extra", "utils"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrayref = "0.3"
assert_matches = "1"
base64 = "0.13"
bincode = "1"
borsh = "0.10"
bs58 = "0.4"
bytemuck = "1"
fluvio-wasm-timer = "0.2"
log = "0.4.17" # only for nightly builds
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
solana-frozen-abi = "~1.18"
solana-frozen-abi-macro = "~1.18"
solana-sdk = "~1.18"
thiserror = "1"

[build-dependencies]
rustc_version = "0.4"