[package]
name = "solana-playground-utils-wasm"
version = "0.1.0"
description = "WASM utils for Solana Playground."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["js"]
js = []

[dependencies]
wasm-bindgen = "*"